WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
53827
Link opened in background tab fails to paint when activated if it completes loading before tab is selected
https://bugs.webkit.org/show_bug.cgi?id=53827
Summary
Link opened in background tab fails to paint when activated if it completes l...
Anders Carlsson
Reported
2011-02-04 17:31:28 PST
Link opened in background tab fails to paint when activated if it completes loading before tab is selected
Attachments
Patch
(1.32 KB, patch)
2011-02-04 17:32 PST
,
Anders Carlsson
mrowe
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2011-02-04 17:32:05 PST
Created
attachment 81326
[details]
Patch
Anders Carlsson
Comment 2
2011-02-04 17:32:40 PST
Committed
r77708
: <
http://trac.webkit.org/changeset/77708
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug