2011-02-04  Anders Carlsson  <andersca@apple.com>

Reviewed by Mark Rowe.

        Link opened in background tab fails to paint when activated if it completes loading before tab is selected
        https://bugs.webkit.org/show_bug.cgi?id=53827
        <rdar://problem/8962355>

        * WebProcess/WebPage/DrawingAreaImpl.cpp:
        (WebKit::DrawingAreaImpl::resumePainting):
        Invalidate the entire page.


Canonical link: https://commits.webkit.org/67776@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77708 268f45cc-cd09-0410-ab3c-d52691b4dbfc